# dataset_foundry

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: actions.md  run_swe_agent_architecture.md
examples/debugging/async_test/: pipeline.py
examples/refactorable_code/add_refactor_task/: config.yaml  pipeline.py
examples/refactorable_code/check_code_syntax/: pipeline.py
examples/refactorable_code/generate/: pipeline.py
examples/refactorable_code/generate_all_from_spec/: config.yaml  pipeline.py  pipeline_functions.py  pipeline_separate_specs.py
examples/refactorable_code/generate_code_from_spec/: config.yaml  pipeline.py
examples/refactorable_code/generate_code_from_unit_tests/: config.yaml  pipeline.py
examples/refactorable_code/generate_repo_from_spec_with_swe_agent/: config.yaml  pipeline.py
examples/refactorable_code/generate_scenarios/: config.yaml  pipeline.py
examples/refactorable_code/generate_spec/: config.yaml  pipeline.py  pipeline_functions.py  pipeline_multiple_files.py
examples/refactorable_code/generate_spec_from_scenarios/: config.yaml  pipeline.py
examples/refactorable_code/generate_unit_tests_from_spec/: config.yaml  pipeline.py
examples/refactorable_code/generate_using_scenarios/: pipeline.py
examples/refactorable_code/regenerate_unit_tests/: config.yaml  pipeline.py
examples/refactorable_code/run_unit_tests/: pipeline.py
examples/refactorable_code/run_unit_tests_by_folder/: pipeline.py
examples/refactorable_code/run_unit_tests_sandbox/: pipeline.py
scripts/: analyze_dataset.py  clean_dataset.py  renumber_dataset.py
src/dataset_foundry/: __init__.py
src/dataset_foundry/actions/dataset/: generate_dataset.py  if_dataset.py  load_context.py  load_dataset.py  load_dataset_from_directory.py  load_dataset_metadata.py  reset_dataset.py  run_pipeline.py  save_dataset.py  save_dataset_chat.py  set_dataset_context.py
src/dataset_foundry/actions/item/: delete_files.py  do_item_steps.py  exec_item.py  foreach_item_element.py  generate_item.py  if_item.py  load_gitignore.py  load_item.py  log_counter.py  log_item.py  parse_item.py  run_swe_agent.py  run_unit_tests.py  save_item.py  save_item_chat.py  set_item_metadata.py  set_item_property.py  validate_code_syntax.py  while_item.py
src/dataset_foundry/cli/: advanced_argparse.py  config.py  main.py
src/dataset_foundry/configs/sandboxes/: README.md
src/dataset_foundry/core/: config.py  context.py  dataset.py  dataset_item.py  dataset_pipeline.py  event_emitter.py  execution_context.py  item_pipeline.py  key.py  model.py  pipeline.py  pipeline_service.py  template.py
src/dataset_foundry/displays/: get_display.py
src/dataset_foundry/displays/core/: console_service.py  display.py  pipeline_log_handler.py
src/dataset_foundry/displays/full/: full_display.py  full_display_app.py
src/dataset_foundry/types/: dataset_action.py  dataset_item_execution_info.py  item_action.py  item_pipeline_options.py  pipeline_execution_info.py  unit_test_result.py
src/dataset_foundry/utils/: find_files.py  get.py  get_model_fields.py  get_pipeline_metadata.py  save_messages.py
tests/: test_find_paths.py  test_foreach_item.py  test_get.py  test_sandbox_runner.py
(+44 files in other folders)
