[project]
name = "dataset-foundry"
description = "Build and refine datasets using LLMs"
readme = "README.md"
authors = [
  {name = "Trevor Lohrbeer", email = "trevor@fastfedora.com"},
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "anyio>=4.8.0",
    "datason>=0.13.0",
    "docker>=7.1.0",
    "gitmatch>=0.2.1",
    "langchain==0.3.21",
    "langchain-anthropic==0.3.10",
    "langchain-core==0.3.45",
    "langchain-openai==0.3.9",
    "mergedeep>=1.3.4",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "textual>=6.2.0",
    "toolz>=1.0.0",
]

[project.scripts]
dataset-foundry = "dataset_foundry.cli.main:main"

[project.optional-dependencies]
dist = ["twine", "build"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_foundry"]

[tool.hatch.version]
source = "vcs"
